[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name = "rpca"
description = "Python implementation of robust principal component analysis"
version = "1.1.0"
readme = "README.md"
requires-python = ">=3.9,<4.0"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "numpy",
]
keywords = [
  "pca",
  "principal component analysis",
  "rpca",
  "robust pca",
  "robust principal component analysis",
]
authors = [
  {name = "2020leon", email = "leon2000.tw@gmail.com"},
]
maintainers = [
  {name = "2020leon", email = "leon2000.tw@gmail.com"},
]
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = [ "pre-commit", "yapf" ]

[project.urls]
Repository = "https://github.com/2020leon/rpca"

[tool.setuptools]
package-dir = {"rpca" = "rpca"}

[tool.yapf]
based_on_style = "facebook"
indent_width = 2
continuation_indent_width = 2
